Fix list page field passthrough bugs (Headers/Indent/Proxy/DataProtocol); Add development notes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -265,6 +265,16 @@
                                     </div>
                                 </div>
 
+                                <!-- 透传字段 -->
+                                <div class="form-group">
+                                    <label class="form-label">透传字段 <span
+                                            style="color:var(--text-dim)">(传递到详情页合并保存)</span></label>
+                                    <div id="list-fields" class="fields-container"></div>
+                                    <button type="button" class="btn btn-outline btn-sm" onclick="addListField()"
+                                        style="margin-top:6px;">
+                                        ➕ 添加字段
+                                    </button>
+                                </div>
 
                                 <div class="callback-selector" style="display:none;">
                                     <label>🔀 回调到：</label>
